2001-06-13  Peter Stephenson  <pws@csr.com>

	* 14893: Src/signals.c: make handler mod_export because it's
	needed for signal queueing in various modules.  Probably
	sensible to change handler to zhandler too --- not done yet.

2001-06-13  Sven Wischnowsky  <wischnow@zsh.org>

	* 14897 (and Oliver Kiddle: 14862): Completion/Base/Utility/_values,
	Completion/Unix/Command/_mount, Completion/Unix/Type/_dir_list,
	Src/Zle/computil.c: fix for comparguments (completing after
	single letter options that get their argument in the next
	word); make _values ignore some of the standard option it may
	get; make _mount use _dir_list in some places and improve that;
	`document' comparguments and compvalues with some comments in
	computil.c

2001-06-13  Oliver Kiddle  <opk@zsh.org>

	* 14896: Completion/Zsh/Type/_command_names: don't complete read-only
	parameters on the left side of an assignment

2001-06-13  Peter Stephenson  <pws@csr.com>

	* unposted: Completion/compinstall: pointed out by Bart:  bad
	array handling.

2001-06-13  Sven Wischnowsky  <wischnow@zsh.org>

	* 14883 (Jos Backus): Completion/Unix/Command/_mount: add code for
	BSDish systems

2001-06-12  Clint Adams  <clint@zsh.org>

	* 14863: Src/Modules/tcp.c, Src/Modules/zftp.c:
	introduce tcp_connect.

2001-06-12  Peter Stephenson  <pws@csr.com>

	* 14858: Doc/Zsh/options.yo, Src/options.c, Src/subst.c,
	Src/zsh.h, Test/E01options.ztst: KSH_TYPESET option allows
	assignments after typeset not to be split.

2001-06-12  Bart Schaefer  <schaefer@zsh.org>

	* 14849: README: Request "reporter" output only if a bug cannot
	be reproduced with 'zsh -f'.

2001-06-11  Clint Adams  <clint@zsh.org>

	* 14843: Src/Modules/tcp.c, Src/Modules/zftp.c:
	introduce tcp_close and use it to close control fd.

2001-06-11  Sven Wischnowsky  <wischnow@zsh.org>

	* 14841: Completion/Base/Utility/_values, Src/Zle/computil.c:
	new word parsing for compvalues; this should now handle empty
	separators correctly, as far as it is possible
